# griot

./: .env.example  .gitignore  .pre-commit-config.yaml  100100.yaml  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  orders.yaml  package-lock.json  package.json  pyproject.toml
griot/: .coverage  coverage.xml  pyproject.toml  test-output.xml
griot-cli/: README.md  pyproject.toml
griot-cli/docs/: ci_cd.rst  commands.rst  configuration.rst  installation.rst  odcs_quality_rules.rst
griot-cli/docs/commands/: diff.rst  init.rst  lint.rst  migrate.rst  pull.rst  push.rst  residency.rst  validate.rst
griot-cli/src/griot_cli/: __init__.py  config.py  main.py  output.py
griot-cli/src/griot_cli/commands/: __init__.py  diff.py  init.py  lint.py  manifest.py  migrate.py  push.py  report.py  residency.py  validate.py
griot-core/: pyproject.toml  scratchpad.ipynb  semi_orders.yaml
griot-core/docs/: Makefile  changelog.rst  conf.py  index.rst  requirements.txt
griot-core/docs/api/: contract.rst  exceptions.rst  index.rst  mock.rst  reports.rst  validation.rst
griot-core/docs/examples/: analytics.rst  ecommerce.rst  fintech.rst  index.rst
griot-core/docs/getting-started/: quickstart.rst
griot-core/docs/html-docs/doctrees/: changelog.doctree  contributing.doctree  index.doctree
griot-core/docs/html-docs/doctrees/api/: contract.doctree  exceptions.doctree  index.doctree  reports.doctree  schema.doctree  types.doctree  validation.doctree
griot-core/docs/html-docs/doctrees/guides/: concepts.doctree  contracts.doctree  installation.doctree  mock_data.doctree  quality_rules.doctree  quickstart.doctree  schema_definition.doctree  validation.doctree
griot-core/docs/html-docs/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
griot-core/docs/html-docs/html/_modules/: index.html
griot-core/docs/html-docs/html/_sources/: changelog.rst.txt  contributing.rst.txt
griot-core/docs/source/: conf.py  index.rst
griot-core/docs/source/_static/: custom.css
griot-core/docs/source/api/: index.rst  schema.rst  types.rst  validation.rst
griot-core/docs/source/guides/: installation.rst  mock_data.rst  schema_definition.rst  validation.rst
griot-core/docs/user-guide/: defining-contracts.rst  index.rst  lineage.rst  mock-data.rst  residency.rst
griot-core/src/griot_core/: __init__.py  _utils.py  constraints.py  contract.py  exceptions.py  manifest.py  migration.py  mock.py  models.py  privacy_types.py  reports.py  schema.py  types.py  validation.py  validation_types.py
griot-core/src/griot_core/validation/: __init__.py  engine.py  pre_validation.py  types.py
griot-registry/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
griot-registry/docs/: Makefile  api-reference.rst  conf.py  deployment.rst  index.rst  requirements.txt
griot-registry/docs/source/: api_reference.rst  architecture.rst  authentication.rst  changelog.rst  conf.py  configuration.rst  extending.rst  getting_started.rst  index.rst  services.rst  storage.rst
griot-registry/docs/source/api/: approvals.rst  comments.rst  contracts.rst  endpoints.rst  issues.rst  runs.rst  schemas.rst  search.rst  validations.rst
griot-registry/docs/source/client/: examples.rst  index.rst
griot-registry/html-docs/doctrees/: administration.doctree  api-reference.doctree  authentication.doctree  client-integration.doctree  deployment.doctree  environment.pickle  getting-started.doctree  index.doctree  storage.doctree
griot-registry/html-docs/html/: .buildinfo  administration.html  api-reference.html  authentication.html  client-integration.html  deployment.html  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js  storage.html
griot-registry/html-docs/html/_sources/: administration.rst.txt  authentication.rst.txt  client-integration.rst.txt  getting-started.rst.txt  index.rst.txt  storage.rst.txt
griot-registry/scripts/: start-dev.ps1  start-dev.sh
griot-registry/src/griot_registry/: __init__.py  client.py  config.py  schemas.py  server.py
griot-registry/src/griot_registry/api/: __init__.py  approvals.py  auth.py  comments.py  contracts.py  dependencies.py  health.py  issues.py  notifications.py  reports.py  roles.py  runs.py  schemas.py  search.py  tasks.py  teams.py  users.py  validations.py
griot-registry/src/griot_registry/auth/: __init__.py  api_key.py  dependencies.py  jwt.py  models.py  oauth.py
griot-registry/src/griot_registry/models/: __init__.py  auth.py  notifications.py  roles.py  tasks.py  teams.py  users.py
griot-registry/src/griot_registry/services/: __init__.py  contracts.py  validation.py
griot-registry/src/griot_registry/storage/: __init__.py  base.py  filesystem.py  git.py  mongodb.py  postgres.py
griot-registry/tests/: conftest.py  test_client_methods.py  test_e2e_schemas.py
griot/.github/workflows/: test.yml
griot/griot-cli/docs/: index.rst
griot/griot-cli/docs/commands/: manifest.rst  mock.rst  report.rst
griot/griot-cli/src/griot_cli/: main.py  output.py
griot/griot-core/docs/api/: manifest.rst  models.rst  types.rst
griot/griot-core/docs/examples/: healthcare.rst
griot/griot-core/docs/getting-started/: first-contract.rst  index.rst  installation.rst
griot/griot-core/docs/types/: dataclasses.rst  enums.rst  index.rst
griot/griot-core/docs/user-guide/: field-types.rst  manifests.rst  pii-sensitivity.rst  reports.rst  validation.rst
griot/griot-core/src/griot_core/: __init__.py  manifest.py  models.py  reports.py  types.py
griot/griot-enforce/: pyproject.toml
griot/griot-enforce/docs/: api-reference.rst  conf.py  dagster.rst  examples.rst  index.rst
griot/griot-enforce/src/griot_enforce/: __init__.py  validator.py
griot/tests/: __init__.py
griot/tests/core/: __init__.py  test_benchmark.py  test_constraints.py  test_contract.py  test_exceptions.py  test_models.py  test_reports.py  test_validation.py
griot/tests/enforce/: __init__.py
(+571 files in other folders)
