[project]
name = "griot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "griot-core",
]

[tool.uv.workspace]
members = ["griot-cli", "griot-core", "griot-enforce", "griot-registry"]

[project.optional-dependencies]
cli = ["griot-cli"]
enforce = ["griot-enforce"]
registry = ["griot-registry"]
all = ["griot-core", "griot-cli", "griot-enforce", "griot-registry"]

[tool.uv.sources]
griot-core = { workspace = true }
griot-cli = { workspace = true }
griot-enforce = { workspace = true }
griot-registry = { workspace = true }