[project]
name = "griot-core"
version = "0.1.0"
description = "Core library for Griot data contracts - schema validation, mock generation, and AI manifests"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Griot Team" }
]
keywords = ["data-contracts", "validation", "schema", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# No runtime dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
yaml = ["pyyaml>=6.0"]
all = ["pandas>=1.5.0", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/griot_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
