[project]
name = "griot-registry"
version = "0.2.0"
description = "Central registry API for Griot data contracts"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Griot Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "griot-core>=0.1.0",
    # MongoDB
    "motor>=3.3.0",
    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.0",
    # HTTP client
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mongomock-motor>=0.0.29",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "furo>=2024.1.0",
    "myst-parser>=3.0.0",
    "sphinx-autobuild>=2024.0.0",
    "sphinx_autodoc_typehints",
    "furo"
]

[project.scripts]
griot-registry = "griot_registry.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/griot_registry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
