[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "griot-enforce"
version = "0.1.0"
description = "Runtime validation for data orchestrators (Airflow, Dagster, Prefect)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["data-contracts", "validation", "airflow", "dagster", "prefect"]
authors = [
    { name = "Griot Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "griot-core>=0.4.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.5.0"]
dagster = ["dagster>=1.5.0"]
prefect = ["prefect>=2.14.0"]
all = [
    "apache-airflow>=2.5.0",
    "dagster>=1.5.0",
    "prefect>=2.14.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://griot.dev/docs/enforce"
Repository = "https://github.com/griot-project/griot"

[tool.hatch.build.targets.wheel]
packages = ["src/griot_enforce"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=griot_enforce"
